--- a/MedVault/MedVault.csproj
+++ b/MedVault/MedVault.csproj
@@ -15,7 +15,7 @@
 		<ApplicationTitle>MedVault</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.medvault</ApplicationId>
+		<ApplicationId>com.xperify.medvault</ApplicationId>
 		<ApplicationIdGuid>4a23d844-a3a7-4cdf-85ba-c4e147506d2c</ApplicationIdGuid>
 
 		<!-- Versions -->
@@ -30,6 +30,25 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+	  <LangVersion>latestmajor</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+	  <DebugSymbols>true</DebugSymbols>
+	  <WarningLevel>4</WarningLevel>
+	  <LangVersion>latestmajor</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-maccatalyst|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	  <CodesignKey>Mac Developer</CodesignKey>
+	  <PackageSigningKey>3rd Party Mac Developer Installer</PackageSigningKey>
+	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -50,6 +69,26 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.1.0" />
+		<PackageReference Include="Microsoft.Datasync.Client" Version="5.1.3" />
+		<PackageReference Include="Microsoft.Datasync.Client.SQLiteStore" Version="5.1.3" />
+		<PackageReference Include="sqlite-net-sqlcipher" Version="1.8.116" />
+		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Pages\" />
+	  <None Remove="Data\" />
+	  <None Remove="Data\Models\" />
+	  <None Remove="Data\Repositories\" />
+	  <None Remove="ViewModels\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Pages\" />
+	  <Folder Include="Data\" />
+	  <Folder Include="Data\Models\" />
+	  <Folder Include="Data\Repositories\" />
+	  <Folder Include="ViewModels\" />
+	</ItemGroup>
 </Project>
